--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -15,7 +15,7 @@ services:
     image: python-img
     build: 
       context: ./backend
-      dockerfile:  ./dev.Dockerfile
+      dockerfile:  dev.Dockerfile
     ports:
       - 5000:5000
     restart: always
